tests/ui/pub/pub-ident-fn.stderr
error: missing `fn` for function definition
  --> $DIR/pub-ident-fn.rs:3:1
   |
LL | pub foo(_s: usize) -> bool { true }
   | ^^^^^^^
   |
help: add `fn` here to parse `foo` as a function
   |
LL | pub fn foo(_s: usize) -> bool { true }
   |     ++

error: aborting due to 1 previous error

